# frs-development-platform

./: .gitignore  FRS_CONSOLIDATION_PLAN.md  FRS_QUICK_START.md  FRS_SUMMARY.md  README.md  SESSION_1_SUMMARY.md  STATUS.md  pyproject.toml  requirements.txt  setup.py
config/instances/: instance_config_template.md
docs/components/: applications.md  plugins.md  utilities.md
scripts/deployment/: health_check.py
scripts/migration/: analyze_mdm_usage.py
src/frs_platform/: __init__.py
src/frs_platform/cli/: config_commands.py  instance_commands.py  main.py
src/frs_platform/clients/: joget_client.py
src/frs_platform/integrations/: __init__.py
src/frs_platform/models/: config.py
src/frs_platform/operations/: __init__.py
src/frs_platform/utils/: config_loader.py  logger.py
src/frs_platform/validators/: __init__.py
